--- a/base-site/resources/css/style.css
+++ b/base-site/resources/css/style.css
@@ -7,6 +7,12 @@ table { border-collapse: collapse; border-spacing: 0; }
 body{ font-size: 19px; }
 ol, ul { list-style: none; }
 
+/* IFRAME */
+.embed-container iframe, 
+.embed-container object, 
+.embed-container embed { width: 100%; height: 100%; top: 0; left: 0; position: absolute; }
+#map-canvas { width: 100%; height: 100%; top: 0; left: 0; margin: 0px; padding: 0px; position: absolute; }
+
 /* FAIXA DE 320 - 480 (Smartphone) */
 @media only screen and (max-width: 480px) {
 	
