--- a/base-site/resources/css/style.css
+++ b/base-site/resources/css/style.css
@@ -4,14 +4,87 @@ footer, header, hgroup, menu, nav, section { display: block; }
 
 table { border-collapse: collapse; border-spacing: 0; }
 
-body{ font-size: 19px; }
+body { width: 100%; height: 100%; -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; -ms-transition: all 0.2s ease-out; transition: all 0.2s ease-out; -webkit-font-smoothing:antialiased; }
+html { width: 100%; height: 100%; }
 ol, ul { list-style: none; }
 
-/* IFRAME */
+/* CLASSES */
+.depreceated-item { color: #f00; }
+
+.lista li:before { left: -3px; font-family: FontAwesome; position: relative; }
+
+.lista-estrutura li:before { content: "\f121"; }
+.lista-estrutura li li:before { content: "\f120"; }
+.lista-estrutura li li li:before { content: "\f149"; }
+
+.lista-pessoas li:before { content: "\f007"; }
+
+.navbar { max-height: 100px; }
+.section { padding-top: 100px; }
+#intro { padding-top: 150px; }
+
+/* CONTAINER DOS SLIDES */
+/*.containerSlide { width: 100%; height: 400%; top: 0%; -webkit-transition: all 0.5s 0.4s ease-out; -moz-transition: all 0.2s 0.4s ease-out; -o-transition: all 0.2s 0.4s ease-out; -ms-transition: all 0.2s 0.4s ease-out; transition: all 0.5s 0.4s ease-out; position: absolute; }
+.scroll { -webkit-transition: all 0.4s 0.2s ease-out; -moz-transition: all 0.2s 0s ease-out; -o-transition: all 0.2s 0s ease-out; -ms-transition: all 0.2s 0s ease-out; transition: all 0.4s 0.2s ease-out; }
+.slidePage { height: 25%; margin: 0; margin-top: 150px; -webkit-transition: transform 0.2s ease-out; -moz-transition: transform 0.2s ease-out; -o-transition: transform 0.2s ease-out; -ms-transition: transform 0.2s ease-out; transition: transform 0.2s ease-out; position: absolute; overflow: hidden; }
+.slidePage1 { top: 0; }
+.slidePage2 { top: 25%; }
+.slidePage3 { top: 50%; }
+.slidePage4 { top: 75%; } */
+
+.btnSobeDesce { width: 41px; height: 41px; right: 60px; background: url('../images/sprite-home.png'); cursor: pointer; position: fixed; float: right; z-index: 300; }
+.sobe { top: 185px; background-position:  0 -364px; }
+.desce { bottom: 35px; background-position:  0 -411px; }
+
+/* GOOGLE MAPS */
 .embed-container iframe, 
 .embed-container object, 
 .embed-container embed { width: 100%; height: 100%; top: 0; left: 0; position: absolute; }
 #map-canvas { width: 100%; height: 100%; top: 0; left: 0; margin: 0px; padding: 0px; position: absolute; }
+.overlaymap { width: 100%; height: 100%; background: #000000; opacity: 0.5; filter: alpha(opacity=50); position: absolute; z-index: 275; }
+    
+/* PROGRESS TAG */
+progress::-webkit-progress-bar { background: #03823d; }
+progress::-webkit-progress-value { background: #fff; -webkit-animation: move 5s linear 0 infinite; }
+progress::-moz-progress-bar { background: #fff; }
+        
+/* POLYFILL */
+.progress { position: relative; }
+progress, progress[role][aria-valuenow] { width: 350px; height: 7px; color: #FFF; background: #03823d!important; -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; display: block; }
+progress[role] { width: 10em; height: 1em; vertical-align: -.2em; -moz-box-sizing: border-box; box-sizing: border-box; display: inline-block; position: relative; }
+progress[role], progress[aria-valuenow]:before { background-color: #FFF; }
+progress[role], progress[role]:after { background-repeat: repeat-x; background-position: 0 0; -moz-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; }
+progress[aria-valuenow] { background: #eee; }
+progress[aria-valuenow]:before { content: ""; height: 100%; background: #FFF; display: block; }
+progress[role]:after { content: ""; top: 0; right: 0; bottom: 0; left: 0; position: absolute; }
+        
+@-webkit-keyframes move { 
+    0% {background-position: 0px 0px, 0 0, 0 0} 
+    100% {background-position: -100px 0px, 0 0, 0 0} 
+}
+
+ /* SCROLLPANE */
+.scroll-pane { width: 100%; height: 200px; outline: none; overflow: auto; }
+.scroll-pane-size { height: 275px; padding: 0 0 0 0; }
+
+ /* SCROLLPANE BAR */
+.jspContainer { position: relative; overflow: hidden; }
+.jspPane { position: absolute; }
+.jspVerticalBar { width: 16px; height: 100%; top: 0; right: 0; background: red; position: absolute; }
+.jspHorizontalBar { width: 100%; height: 16px; bottom: 0; left: 0; background: red; position: absolute; }
+.jspCap { display: none; }
+.jspHorizontalBar .jspCap { float: left; }
+.jspTrack { background: #dde; position: relative; }
+.jspDrag { top: 0; left: 0; background: #bbd; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; cursor: pointer; position: relative; }
+.jspHorizontalBar .jspTrack,
+.jspHorizontalBar .jspDrag { height: 100%; float: left; }
+.jspArrow { margin: 0; padding: 0; background: #50506d; text-indent: -20000px; cursor: pointer; display: block; }
+.jspArrow.jspDisabled { background: #80808d; cursor: default; }
+.jspVerticalBar .jspArrow { height: 16px; }
+.jspHorizontalBar .jspArrow { width: 16px; height: 100%; float: left; }
+.jspVerticalBar .jspArrow:focus { outline: none; }
+.jspCorner { height: 100%; background: #eeeef4; float: left; }
+
 
 /* FAIXA DE 320 - 480 (Smartphone) */
 @media only screen and (max-width: 480px) {
@@ -23,14 +96,15 @@ ol, ul { list-style: none; }
 	
 }
 
-/* FAIXA DE 768 - 1024 (Tablet) */
-@media only screen and (max-width: 1024px) {
+/* FAIXA DE 768 - 992 (Tablet) */
+@media only screen and (max-width: 992px) {
 	
 }
 
 /* FAIXA DE 1024 - 1920 (Desktop) */
-@media only screen and (min-width: 1024px) {
-	
+@media only screen and (min-width: 992px) {
+	.navbar { -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out; -moz-transition: background .5s ease-in-out,padding .5s ease-in-out; transition: background .5s ease-in-out,padding .5s ease-in-out; }
+    .top-nav-collapse { padding: 0; max-height: 100px; }
 }
 
 /* WINDOWS PHONE/ ANDROID */
